updating landing page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div> 
 
-        <section class="section-2">
+        <div class="other-sections">
             <div class="boost-your-business container d-flex justify-content-between">
                 <div class="content-1">
                     <h2><span class="text-white">Boost your </span> business <br> overall performance</h2>
@@ -156,16 +156,23 @@
             </section>
 
             <section class="testimonials container">
-                <div class="heading">
+                <div class="text-heading">
                     <p>With Earth, you can enhance your customers' payment experience while ensuring the security of their data. <a href="http://">Sign up now</a> to experience the power of Earth!</p>
                 </div>
-                <div>
-                    <h2>Here's what <span>People say about us</span></h2>
+                <div class="testimonials-content">
                     <div>
-                        <div>
-                            <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
-                            <h6>Winifred Ngozi</h6>
-                            <p>Cocacola NG</p>
+                        <h2>Here's what <span>People say about us</span></h2>
+                        <div class="d-flex">
+                            <div class="testimonials-text d-flex flex-column align justify-content-between">
+                                <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
+                                <div>
+                                    <h6>Winifred Ngozi</h6>
+                                    <p>Cocacola NG</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img src="/assets/img/sample-img2.png" alt="" class="image-fluid">
+                            </div>
                         </div>
                     </div>
                 </div>
