updating landing page

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <div class="content-2">
                     <img src="/assets/img/man-standing.png" alt="" class="img-2">
                     <p>Process payments with Earth in seconds, ensuring your customers have a seamless payment experience. Our state-of-the-art encryption technology guarantees the utmost security for all transactions. We offer a simple and straightforward integration process, allowing you to set up our payment gateway with minimal effort.</p>
-                </div>
-                
+                </div> 
             </div>
+
             <div class="container earth-benefits">
                 <div class="row">
                     <div class="col-lg-6 col-sm-12 benefits">
@@ -130,8 +130,32 @@
                     </div>
                 </div>
             </section>
-            <section class="get-started">
-                
+
+            <section class="get-started container">
+                <div class="row">
+                    <h2>How to get <br> started <span>today</span></h2>
+                    <div class="col-lg-5 step-img">
+                        <img src="/assets/img/getstarted-img.png" alt="">
+                    </div>
+                    <div class="col-lg-2">
+                        <div class = "vertical"></div>
+                    </div>
+                    <div class="col-lg-5 get-started-steps">
+                        <div class="step">
+                            <h6>Let us know you</h6>
+                            <p>Give us information about your business so we can tailor your experience.</p>
+                        </div>
+                        <div class="step">
+                            <h6>Integration with your core banking provider</h6>
+                            <p>Our easy to use documented APIs can easily be integrated by your development team.</p>
+                        </div>
+                        <div class="step">
+                            <h6>Start Paying with Earth</h6>
+                            <p>Login into our dedicated dashboard and start receiving payments.</p>
+                        </div>
+                        <button class="btn" type="submit" id="get-started"><a href="#">Get Started</a></button>
+                    </div> 
+                </div>
             </section>
 
             <section class="our-partners">
@@ -177,7 +201,7 @@
                     </div>
                 </div>
             </section>
-        </section>
+        </div>
     </section>
     <script src="app.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
