added footer to the landing page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero-section">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="d-flex justify-content-between container" id="earth-nav">
-                    <a class="navbar-brand" id="earth-logo" href="#">
+                    <a class="navbar-brand earth-logo" href="#">
                             <img src="/assets/img/logo.png" alt="Earth logo">
                     </a>
                     <div>
@@ -61,10 +61,10 @@
             <div class="boost-your-business container d-flex justify-content-between">
                 <div class="content-1">
                     <h2><span class="text-white">Boost your </span> business <br> overall performance</h2>
-                    <img src="/assets/img/girl-standing.png" alt="" class="img-1">
+                    <img src="/assets/img/girl-standing.png" alt="" class="img-1" data-aos="fade-right" data-aos-duration="3000">
                 </div>
                 <div class="content-2">
-                    <img src="/assets/img/man-standing.png" alt="" class="img-2">
+                    <img src="/assets/img/man-standing.png" alt="" class="img-2" data-aos="fade-left" data-aos-duration="3000">
                     <p>Process payments with Earth in seconds, ensuring your customers have a seamless payment experience. Our state-of-the-art encryption technology guarantees the utmost security for all transactions. We offer a simple and straightforward integration process, allowing you to set up our payment gateway with minimal effort.</p>
                 </div> 
             </div>
@@ -76,7 +76,7 @@
                         <button class="btn" type="submit" id="start-paying"><a href="#">Start paying with Earth</a></button>
                     </div>
                     <div class="col-lg-6 col-sm-12">
-                        <div class="d-flex justify-content-around align-items-center card-info">
+                        <div class="d-flex justify-content-around align-items-center card-info" data-aos-duration="2000" data-aos="zoom-in-left">
                             <div>
                                 <img src="/assets/img/easy-registration.svg" alt="">
                             </div>
@@ -85,7 +85,7 @@
                                 <p>Provide basic information about your business, and we'll guide you through the setup process.</p>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-around align-items-center card-info">
+                        <div class="d-flex justify-content-around align-items-center card-info" data-aos-duration="2000" data-aos="zoom-in-left">
                             <div>
                                 <img src="/assets/img/secure.svg" alt="">
                             </div>
@@ -94,7 +94,7 @@
                                 <p>Our state-of-the-art encryption technology guarantees the utmost security for all transactions.</p>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-around align-items-center card-info">
+                        <div class="d-flex justify-content-around align-items-center card-info" data-aos-duration="2000" data-aos="zoom-in-left">
                             <div>
                                 <img src="/assets/img/instant-settlement.svg" alt="">
                             </div>
@@ -103,7 +103,7 @@
                                 <p>Get your funds quickly and efficiently. Earth ensures that your earnings reach your account as soon as possible.</p>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-around align-items-center card-info">
+                        <div class="d-flex justify-content-around align-items-center card-info" data-aos-duration="2000" data-aos="zoom-in-left">
                             <div>
                                 <img src="/assets/img/dashboard.svg" alt="">
                             </div>
@@ -201,6 +201,43 @@
                     </div>
                 </div>
             </section>
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer-content d-flex flex-column align-items-center">
+                        <h2><span>Get your business an</span> easy <br> payment gateway</h2>
+                        <button class="btn-white align-items-center" type="submit" id="read-doc"><a href="#">Get started</a></button>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between spacing">
+                        <a class="earth-logo" href="#">
+                            <img src="/assets/img/logo.png" alt="Earth logo">
+                        </a>  
+                        <div class="d-flex align-items-center list">
+                                <li class="nav-item"><a class="nav-link" href="#">
+                                    Why Earth?</a>
+                                </li>
+                                <li class="nav-item"><a class="nav-link" href="#">
+                                    Customer</a>
+                                </li>
+                                <li class="nav-item"><a class="nav-link" href="#">
+                                Customer</a>
+                                </li>
+                        </div>
+                        <div class="d-flex align-items-center social-icons">
+                            <a href="http://">
+                                <img src="/assets/img/facebook.png" alt="" class="image-fluid socials">
+                            </a>
+                            <a href="http://">
+                                <img src="/assets/img/twitter.png" alt="" class="image-fluid socials">
+                            </a>
+                            <a href="http://">
+                                <img src="/assets/img/instagram.png" alt="" class="image-fluid socials">
+                            </a> 
+                        </div>
+                    </div>
+                    <div class="text-white text-center">©2024 Earth. All rights reserved</div>
+                </div>
+            </footer>
         </div>
     </section>
     <script src="app.js"></script>
