fonts updated and mobile styling

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </div>
 
             <div class="testimonials container d-flex justify-content-between">
-                <div class="cta"><img src="/assets/img/earthpay.png" alt="" srcset=""></div>
+                <div class="cta"><img src="/assets/img/earthpay.png" alt="" srcset="" class="image-fluid"></div>
                 <div><button class="btn-white" type="submit" id="register"><a href="#">Start now >></a></button></div>
-                <div class="testimony"><img src="/assets/img/tetimony.png" alt=""></div>
+                <div class="testimony"><img src="/assets/img/tetimony.png" alt="" class="image-fluid"></div>
             </div>
         </div> 
 
@@ -61,10 +61,10 @@
             <div class="boost-your-business container d-flex justify-content-between">
                 <div class="content-1">
                     <h2><span class="text-white">Boost your </span> business <br> overall performance</h2>
-                    <img src="/assets/img/girl-standing.png" alt="" class="img-1" data-aos="fade-right" data-aos-duration="3000">
+                    <img src="/assets/img/girl-standing.png" alt="" class="img-1 image-fluid" data-aos="fade-right" data-aos-duration="3000">
                 </div>
                 <div class="content-2">
-                    <img src="/assets/img/man-standing.png" alt="" class="img-2" data-aos="fade-left" data-aos-duration="3000">
+                    <img src="/assets/img/man-standing.png" alt="" class="img-2 image-fluid" data-aos="fade-left" data-aos-duration="3000">
                     <p>Process payments with Earth in seconds, ensuring your customers have a seamless payment experience. Our state-of-the-art encryption technology guarantees the utmost security for all transactions. We offer a simple and straightforward integration process, allowing you to set up our payment gateway with minimal effort.</p>
                 </div> 
             </div>
@@ -111,6 +111,9 @@
                                 <h6>User-Friendly Dashboard</h6>
                                 <p>Our intuitive dashboard provides real-time insights into your transactions and revenue to stay on top of your business.</p>
                             </div>
+                        </div>
+                        <div class="mobile-button">
+                            <button class="btn" type="submit" id="start-paying"><a href="#">Start paying with Earth</a></button>
                         </div>
                     </div>
                 </div>
@@ -180,22 +183,56 @@
             </section>
 
             <section class="testimonials container">
-                <div class="text-heading">
-                    <p>With Earth, you can enhance your customers' payment experience while ensuring the security of their data. <a href="http://">Sign up now</a> to experience the power of Earth!</p>
+                <div class="row">
+                    <div class="text-heading col">
+                        <p>With Earth, you can enhance your customers' payment experience while ensuring the security of their data. <a href="http://">Sign up now</a> to experience the power of Earth!</p>
+                    </div>
                 </div>
-                <div class="testimonials-content">
-                    <div>
-                        <h2>Here's what <span>People say about us</span></h2>
-                        <div class="d-flex">
-                            <div class="testimonials-text d-flex flex-column align justify-content-between">
-                                <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
-                                <div>
-                                    <h6>Winifred Ngozi</h6>
-                                    <p>Cocacola NG</p>
+                
+                <div class="testimonials-content col">
+                    <div class="container justify-content-between">
+                        <div class="earth-scroll row">
+                            <div class="earth-scroll-view col-4">
+                                <div class="d-flex">
+                                    <div class="testimonials-text d-flex flex-column align justify-content-between">
+                                        <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
+                                        <div>
+                                            <h6>Winifred Ngozi</h6>
+                                            <p>Cocacola NG</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <img src="/assets/img/sample-img2.png" alt="" class="image-fluid">
+                                    </div>
                                 </div>
                             </div>
-                            <div>
-                                <img src="/assets/img/sample-img2.png" alt="" class="image-fluid">
+                            <div class="earth-scroll-view col-4">
+                                <div class="d-flex">
+                                    <div class="testimonials-text d-flex flex-column align justify-content-between">
+                                        <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
+                                        <div>
+                                            <h6>Winifred Ngozi</h6>
+                                            <p>Cocacola NG</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <img src="/assets/img/sample-img2.png" alt="" class="image-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="earth-scroll-view col-4">
+                                <div class="d-flex">
+                                    <div class="testimonials-text d-flex flex-column align justify-content-between">
+                                        <p>I have been using Earth for my online business for over a year now, and I must say it has exceeded all my expectations. It has been an absolute game-changer for my business.</p>
+                                        <div>
+                                            <h6>Winifred Ngozi</h6>
+                                            <p>Cocacola NG</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <img src="/assets/img/sample-img2.png" alt="" class="image-fluid">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
